kubernetes/unifi/proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi
spec:
  ports:
  - protocol: TCP
    port: 443
    targetPort: 443

---

apiVersion: v1
kind: Endpoints
metadata:
  name: unifi
subsets:
  - addresses:
    - ip: 10.106.0.1
    ports:
    - port: 443
