kubernetes/unifi/proxy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
spec:
  ingressClassName: nginx-internal
  rules:
  - host: unifi.internal.yuha0.com
    http:
      paths:
      - backend:
          service:
            name: unifi
            port:
              number: 443
        path: /
        pathType: Prefix
