kubernetes/unifi/proxy/unvr.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unvr
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
spec:
  ingressClassName: nginx-internal
  rules:
  - host: unvr.internal.yuha0.com
    http:
      paths:
      - backend:
          service:
            name: unvr
            port:
              number: 443
        path: /
        pathType: Prefix
---
apiVersion: v1
kind: Service
metadata:
  name: unvr
spec:
  ports:
  - protocol: TCP
    port: 443
    targetPort: 443
---
apiVersion: v1
kind: Endpoints
metadata:
  name: unvr
subsets:
  - addresses:
    - ip: 10.100.0.2
    ports:
    - port: 443
